batman-adv-kernelland (0.1-9) UNRELEASED; urgency=low

  * debian/rules:
    - Use the kernel makefiles directly to build the module to match
      linux-modules-extra-2.6 way of building it
  * debian/patches:
    - 103-outoftree_kbuild.patch, remove due to different linux module build
      approach
  * Convert debian/copyright to new dep5 version
  * Upgraded to policy 3.8.2, no changes required

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Wed, 13 May 2009 15:36:38 +0200

batman-adv-kernelland (0.1-8) unstable; urgency=low

  * Allow Debian Maintainers to upload new versions of batman-adv-kernelland

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Wed, 06 May 2009 13:04:37 +0200

batman-adv-kernelland (0.1-7) unstable; urgency=low

  * Install kernel module source tarball to batman-adv.tar.bz2 instead of
    batman-adv-source.tar.bz2
  * Allow out of tree module build for linux-modules-extra-2.6

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Thu, 09 Apr 2009 20:00:59 +0200

batman-adv-kernelland (0.1-6) unstable; urgency=low

  * Move to new section kernel
  * Upgraded to policy 3.8.1, no changes required
  * debian/control: Move Vcs-* to git.debian.org
  * Add quilt as patch system to debian/rules
  * debian/patches:
    - Add 100-iface-after-forward-broadcast.patch to fix invalid memory
      access after forwarding broadcast ethernet frames
    - Add 101-rcu_iflist.patch to always use rcu save functions to access
      if_list
    - Add 102-log-irqenable-sleep.patch to enable irqs again when reading log
      which may sleep when putting data to userspace

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Thu, 02 Apr 2009 21:09:50 +0200

batman-adv-kernelland (0.1-5) unstable; urgency=low

  * Correct variable to specify path to kernel headers

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Mon, 09 Feb 2009 13:25:06 +0100

batman-adv-kernelland (0.1-4) unstable; urgency=low

  * Correct URL in watch file to match newer releases
