@@ -3,11 +3,13 @@ batman-adv-kernelland (0.1-9) UNRELEASED; urgency=low
   * debian/rules:
     - Use the kernel makefiles directly to build the module to match
       linux-modules-extra-2.6 way of building it
+    - Add get-orig-source target to retrieve source
   * debian/patches:
     - 103-outoftree_kbuild.patch, remove due to different linux module build
       approach
   * Convert debian/copyright to new dep5 version
   * Upgraded to policy 3.8.2, no changes required
+  * Add debian/get-orig-source.sh to get source from svn or via uscan
 
  -- Sven Eckelmann <sven.eckelmann@gmx.de>  Wed, 13 May 2009 15:36:38 +0200
 
